--- a/.config/hypr/themes/night/eww/eww.scss
+++ b/.config/hypr/themes/night/eww/eww.scss
@@ -15,13 +15,13 @@ $rounded-large: 24px;
 $rounded-medium: 8px;
 
 @import "./scss/powermenu.scss";
-@import "./scss/screenshot.scss";
+// @import "./scss/screenshot.scss";
 @import "./scss/system-menu.scss";
 @import "./scss/menu.scss";
 @import "./scss/bar.scss";
 @import "./scss/calendar.scss";
 @import "./scss/control-panel.scss";
-@import "./scss/music.scss";
+// @import "./scss/music.scss";
 @import "./scss/app-launcher.scss";
 @import "./scss/about.scss";
 @import "./scss/dashboard.scss";
@@ -29,8 +29,7 @@ $rounded-medium: 8px;
 
 * {
     all: unset;
-    font-family: 'Fira Code';
-    font-size: 14;
+    font-family: 'Ubuntu Nerd Font';
     padding: 0;
     margin: 0;
     min-height: 0;
