--- a/.config/hypr/themes/night/eww/scss/bar.scss
+++ b/.config/hypr/themes/night/eww/scss/bar.scss
@@ -4,6 +4,7 @@
     color: $text-muted;
     margin: 1em 1em 0;
     background: $background-base;
+    // background: rgba($color: #000000, $alpha: 0.6);
 
     .separator {
         color: $text-inverse;
